--- a/Project_Template.ipynb
+++ b/Project_Template.ipynb
@@ -277,7 +277,7 @@
     "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
     "## sessionId = 338, and itemInSession = 4\n",
     "query = \"CREATE TABLE IF NOT EXISTS music_library_01 \"\n",
-    "query += \"(sessionId int, itemInSession int, artist text, song text, length float, PRIMARY KEY (sesssionId, itemInSession)\"\n",
+    "query += \"(sessionId int, itemInSession int, artist text, song text, length float, PRIMARY KEY (sessionId, itemInSession))\"\n",
     "\n",
     "try:\n",
     "    session.execute(query)\n",
@@ -324,17 +324,15 @@
    "outputs": [],
    "source": [
     "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
-    "from site import execusercustomize\n",
-    "\n",
     "\n",
     "query_01 = \"\"\"\n",
     "    SELECT\n",
     "        artist,\n",
     "        song,\n",
     "        length\n",
-    "    FROM music_library\n",
+    "    FROM music_library_01\n",
     "    WHERE sessionId = 338\n",
-    "    AND itemInSession = 4\n",
+    "      AND itemInSession = 4\n",
     "\"\"\"\n",
     "\n",
     "try:\n",
@@ -358,9 +356,53 @@
    "source": [
     "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
     "## for userid = 10, sessionid = 182\n",
+    "query = \"CREATE TABLE IF NOT EXISTS music_library_02 \"\n",
+    "query += \"(userId int, sessionId int, itemInSession int, artist text, song text, firstName text, lastName text, PRIMARY KEY (userId, sessionId, itemInSession)\"\n",
     "\n",
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = 'event_datafile_new.csv'\n",
     "\n",
-    "                    "
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
+    "        query = \"INSERT INTO music_library_02 (userId, sessionId, itemInSession, artist, song, firstName, lastName) \"\n",
+    "        query = query + \"VALUES(%s, %s, %s, %s, %s, %s)\"\n",
+    "        session.execute(query, (line[10], line[8], line[3], line[0], line[9], line[1], line[4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_02 = \"\"\"\n",
+    "    SELECT\n",
+    "        artist,\n",
+    "        song,\n",
+    "        firstName,\n",
+    "        lastName\n",
+    "    FROM music_library_02\n",
+    "    WHERE userId = 10\n",
+    "      AND sessionId = 182\n",
+    "\"\"\"\n",
+    "\n",
+    "try:\n",
+    "    session.execute(query_02)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -371,8 +413,13 @@
    "source": [
     "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "\n",
+    "query = \"CREATE TABLE IF NOT EXISTS music_library_03 \"\n",
+    "query += \"(song text, sessionId int, itemInSession int, firstName text, lastName text, PRIMARY KEY (song, sessionId, itemInSession)\"\n",
     "\n",
-    "                    "
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -380,14 +427,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "file = 'event_datafile_new.csv'\n",
+    "\n",
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
+    "        query = \"INSERT INTO music_library_03 (song, sessionId, itemInSession, firstName, lastName) \"\n",
+    "        query = query + \"VALUES(%s, %s, %s, %s, %s)\"\n",
+    "        session.execute(query, (line[9], line[8], line[3], line[1], line[4]))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "query_03 = \"\"\"\n",
+    "    SELECT\n",
+    "        firstName,\n",
+    "        lastName\n",
+    "    FROM music_library_03\n",
+    "    WHERE song = 'All Hands Against His Own'\n",
+    "\"\"\"\n",
+    "\n",
+    "try:\n",
+    "    session.execute(query_02)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -402,15 +472,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Drop the table before closing out the sessions"
+    "query = \"DROP TABLE music_library_01\"\n",
+    "try:\n",
+    "    drop = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "query = \"DROP TABLE music_library_02\"\n",
+    "try:\n",
+    "    drop = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "query = \"DROP TABLE music_library_03\"\n",
+    "try:\n",
+    "    drop = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -428,20 +507,6 @@
     "session.shutdown()\n",
     "cluster.shutdown()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
