--- a/Project_Template.ipynb
+++ b/Project_Template.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
     "        query = query + \"VALUES(%s, %s, %s, %s, %s)\"\n",
     "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
     "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[8], line[3], line[0], line[9], line[5]))"
+    "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
    ]
   },
   {
@@ -336,9 +336,12 @@
     "\"\"\"\n",
     "\n",
     "try:\n",
-    "    session.execute(query_01)\n",
+    "    rows = session.execute(query_01)\n",
     "except Exception as e:\n",
-    "    print(e)"
+    "    print(e)\n",
+    "    \n",
+    "for row in rows:\n",
+    "    print(row)"
    ]
   },
   {
@@ -357,7 +360,7 @@
     "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
     "## for userid = 10, sessionid = 182\n",
     "query = \"CREATE TABLE IF NOT EXISTS music_library_02 \"\n",
-    "query += \"(userId int, sessionId int, itemInSession int, artist text, song text, firstName text, lastName text, PRIMARY KEY (userId, sessionId, itemInSession)\"\n",
+    "query += \"(userId int, sessionId int, itemInSession int, artist text, song text, firstName text, lastName text, PRIMARY KEY (userId, sessionId, itemInSession))\"\n",
     "\n",
     "try:\n",
     "    session.execute(query)\n",
@@ -379,7 +382,7 @@
     "    for line in csvreader:\n",
     "        query = \"INSERT INTO music_library_02 (userId, sessionId, itemInSession, artist, song, firstName, lastName) \"\n",
     "        query = query + \"VALUES(%s, %s, %s, %s, %s, %s)\"\n",
-    "        session.execute(query, (line[10], line[8], line[3], line[0], line[9], line[1], line[4]))"
+    "        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4]))"
    ]
   },
   {
@@ -400,9 +403,12 @@
     "\"\"\"\n",
     "\n",
     "try:\n",
-    "    session.execute(query_02)\n",
+    "    rows = session.execute(query_02)\n",
     "except Exception as e:\n",
-    "    print(e)"
+    "    print(e)\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row)"
    ]
   },
   {
@@ -414,7 +420,7 @@
     "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "\n",
     "query = \"CREATE TABLE IF NOT EXISTS music_library_03 \"\n",
-    "query += \"(song text, sessionId int, itemInSession int, firstName text, lastName text, PRIMARY KEY (song, sessionId, itemInSession)\"\n",
+    "query += \"(song text, sessionId int, itemInSession int, firstName text, lastName text, PRIMARY KEY (song, sessionId, itemInSession))\"\n",
     "\n",
     "try:\n",
     "    session.execute(query)\n",
@@ -436,7 +442,7 @@
     "    for line in csvreader:\n",
     "        query = \"INSERT INTO music_library_03 (song, sessionId, itemInSession, firstName, lastName) \"\n",
     "        query = query + \"VALUES(%s, %s, %s, %s, %s)\"\n",
-    "        session.execute(query, (line[9], line[8], line[3], line[1], line[4]))"
+    "        session.execute(query, (line[9], int(line[8]), int(line[3]), line[1], line[4]))"
    ]
   },
   {
@@ -454,9 +460,12 @@
     "\"\"\"\n",
     "\n",
     "try:\n",
-    "    session.execute(query_02)\n",
+    "    rows = session.execute(query_03)\n",
     "except Exception as e:\n",
-    "    print(e)"
+    "    print(e)\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row)"
    ]
   },
   {
@@ -525,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
