--- a/project_02.ipynb
+++ b/project_02.ipynb
@@ -293,6 +293,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query 1: \n",
+    "Returns the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
@@ -317,18 +325,15 @@
    },
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
     "        query = \"INSERT INTO music_library_01 (sessionId, itemInSession, artist, song, length) \"\n",
     "        query = query + \"VALUES(%s, %s, %s, %s, %s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
+    "        # Inserting data from csv and converting to correct data type\n",
     "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
    ]
   },
@@ -358,8 +363,6 @@
     }
    ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
-    "\n",
     "query_01 = \"\"\"\n",
     "    SELECT\n",
     "        artist,\n",
@@ -381,11 +384,23 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Answer\n",
+    "The answer to the query is:\n",
+    "\n",
+    "Artist: Faithless | Song: Music Matters (Mark Knight Dub) | Length: 495.3 s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "editable": true
    },
    "source": [
-    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
+    "\n",
+    "## Query 2:\n",
+    "Returns the name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182"
    ]
   },
   {
@@ -423,6 +438,7 @@
     "    for line in csvreader:\n",
     "        query = \"INSERT INTO music_library_02 (userId, sessionId, itemInSession, artist, song, firstName, lastName) \"\n",
     "        query = query + \"VALUES(%s, %s, %s, %s, %s, %s, %s)\"\n",
+    "        # Inserting data from csv and converting to correct data type\n",
     "        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4]))"
    ]
   },
@@ -467,6 +483,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Answer\n",
+    "The answer to the query is:\n",
+    "\n",
+    "- Artist: Down To The Bone | Song: Keep On Keepin' On | Name of User (First and Last) Sylvie Cruz\n",
+    "- Artist: Three Drives | Song: Greece 2000 | Name of User (First and Last): Sylvie Cruz\n",
+    "- Artist: Sebastien Tellier | Song: Kilometer | Name of User (First and Last): Sylvie Cruz\n",
+    "- Artist: Lonnie Gordon | Song: Catch You Baby (Steve Pitron & Max Sanna Radio Edit) | Name of User (First and Last): Sylvie Cruz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query 3: \n",
+    "Returns every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
@@ -474,8 +511,6 @@
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "\n",
     "query = \"CREATE TABLE IF NOT EXISTS music_library_03 \"\n",
     "query += \"(song text, sessionId int, itemInSession int, firstName text, lastName text, PRIMARY KEY (song, sessionId, itemInSession))\"\n",
     "\n",
@@ -501,6 +536,7 @@
     "    for line in csvreader:\n",
     "        query = \"INSERT INTO music_library_03 (song, sessionId, itemInSession, firstName, lastName) \"\n",
     "        query = query + \"VALUES(%s, %s, %s, %s, %s)\"\n",
+    "        # Inserting data from csv and converting to correct data type\n",
     "        session.execute(query, (line[9], int(line[8]), int(line[3]), line[1], line[4]))"
    ]
   },
@@ -537,6 +573,18 @@
     "\n",
     "for row in rows:\n",
     "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Answer\n",
+    "The answer to the query is:\n",
+    "\n",
+    "User Name (first and last): Sara Johnson\n",
+    "User Name (first and last): Jacqueline Lynch\n",
+    "User Name (first and last): Tegan Levine"
    ]
   },
   {
