--- a/project_02.ipynb
+++ b/project_02.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "editable": true
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "editable": true
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "editable": true
    },
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "editable": true
    },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -294,7 +294,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "## Query 1: \n",
     "Returns the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4"
@@ -302,13 +304,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "query = \"CREATE TABLE IF NOT EXISTS music_library_01 \"\n",
+    "query = \"CREATE TABLE IF NOT EXISTS songs_by_session \"\n",
     "query += \"(sessionId int, itemInSession int, artist text, song text, length float, PRIMARY KEY (sessionId, itemInSession))\"\n",
     "\n",
     "try:\n",
@@ -319,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {
     "editable": true
    },
@@ -331,7 +333,7 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "        query = \"INSERT INTO music_library_01 (sessionId, itemInSession, artist, song, length) \"\n",
+    "        query = \"INSERT INTO songs_by_session (sessionId, itemInSession, artist, song, length) \"\n",
     "        query = query + \"VALUES(%s, %s, %s, %s, %s)\"\n",
     "        # Inserting data from csv and converting to correct data type\n",
     "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
@@ -348,18 +350,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "editable": true,
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row(artist='Faithless', song='Music Matters (Mark Knight Dub)', length=495.30731201171875)\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artist</th>\n",
+       "      <th>length</th>\n",
+       "      <th>song</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Faithless</td>\n",
+       "      <td>495.307312</td>\n",
+       "      <td>Music Matters (Mark Knight Dub)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      artist      length                             song\n",
+       "0  Faithless  495.307312  Music Matters (Mark Knight Dub)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -368,7 +409,7 @@
     "        artist,\n",
     "        song,\n",
     "        length\n",
-    "    FROM music_library_01\n",
+    "    FROM songs_by_session\n",
     "    WHERE sessionId = 338\n",
     "      AND itemInSession = 4\n",
     "\"\"\"\n",
@@ -378,13 +419,23 @@
     "except Exception as e:\n",
     "    print(e)\n",
     "    \n",
+    "results_list = []\n",
     "for row in rows:\n",
-    "    print(row)"
+    "    row_dict = {}\n",
+    "    row_dict['artist'] = row.artist\n",
+    "    row_dict['song'] = row.song\n",
+    "    row_dict['length'] = row.length\n",
+    "    results_list.append(row_dict)\n",
+    "    \n",
+    "df_results = pd.DataFrame(results_list)\n",
+    "df_results.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "### Answer\n",
     "The answer to the query is:\n",
@@ -405,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {
     "editable": true
    },
@@ -413,7 +464,7 @@
    "source": [
     "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
     "## for userid = 10, sessionid = 182\n",
-    "query = \"CREATE TABLE IF NOT EXISTS music_library_02 \"\n",
+    "query = \"CREATE TABLE IF NOT EXISTS songs_by_user \"\n",
     "query += \"(userId int, sessionId int, itemInSession int, artist text, song text, firstName text, lastName text, PRIMARY KEY (userId, sessionId, itemInSession))\"\n",
     "\n",
     "try:\n",
@@ -424,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {
     "editable": true
    },
@@ -436,7 +487,7 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "        query = \"INSERT INTO music_library_02 (userId, sessionId, itemInSession, artist, song, firstName, lastName) \"\n",
+    "        query = \"INSERT INTO songs_by_user (userId, sessionId, itemInSession, artist, song, firstName, lastName) \"\n",
     "        query = query + \"VALUES(%s, %s, %s, %s, %s, %s, %s)\"\n",
     "        # Inserting data from csv and converting to correct data type\n",
     "        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4]))"
@@ -444,20 +495,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {
     "editable": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row(artist='Down To The Bone', song=\"Keep On Keepin' On\", firstname='Sylvie', lastname='Cruz')\n",
-      "Row(artist='Three Drives', song='Greece 2000', firstname='Sylvie', lastname='Cruz')\n",
-      "Row(artist='Sebastien Tellier', song='Kilometer', firstname='Sylvie', lastname='Cruz')\n",
-      "Row(artist='Lonnie Gordon', song='Catch You Baby (Steve Pitron & Max Sanna Radio Edit)', firstname='Sylvie', lastname='Cruz')\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artist</th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>lastName</th>\n",
+       "      <th>song</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Down To The Bone</td>\n",
+       "      <td>Sylvie</td>\n",
+       "      <td>Cruz</td>\n",
+       "      <td>Keep On Keepin' On</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Three Drives</td>\n",
+       "      <td>Sylvie</td>\n",
+       "      <td>Cruz</td>\n",
+       "      <td>Greece 2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sebastien Tellier</td>\n",
+       "      <td>Sylvie</td>\n",
+       "      <td>Cruz</td>\n",
+       "      <td>Kilometer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lonnie Gordon</td>\n",
+       "      <td>Sylvie</td>\n",
+       "      <td>Cruz</td>\n",
+       "      <td>Catch You Baby (Steve Pitron &amp; Max Sanna Radio...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              artist firstName lastName  \\\n",
+       "0   Down To The Bone    Sylvie     Cruz   \n",
+       "1       Three Drives    Sylvie     Cruz   \n",
+       "2  Sebastien Tellier    Sylvie     Cruz   \n",
+       "3      Lonnie Gordon    Sylvie     Cruz   \n",
+       "\n",
+       "                                                song  \n",
+       "0                                 Keep On Keepin' On  \n",
+       "1                                        Greece 2000  \n",
+       "2                                          Kilometer  \n",
+       "3  Catch You Baby (Steve Pitron & Max Sanna Radio...  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -467,7 +586,7 @@
     "        song,\n",
     "        firstName,\n",
     "        lastName\n",
-    "    FROM music_library_02\n",
+    "    FROM songs_by_user\n",
     "    WHERE userId = 10\n",
     "      AND sessionId = 182\n",
     "    ORDER BY sessionId, itemInSession\n",
@@ -478,13 +597,24 @@
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
+    "results_list = []\n",
     "for row in rows:\n",
-    "    print(row)"
+    "    row_dict = {}\n",
+    "    row_dict['artist'] = row.artist\n",
+    "    row_dict['song'] = row.song\n",
+    "    row_dict['firstName'] = row.firstname\n",
+    "    row_dict['lastName'] = row.lastname\n",
+    "    results_list.append(row_dict)\n",
+    "    \n",
+    "df_results = pd.DataFrame(results_list)\n",
+    "df_results.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "### Answer\n",
     "The answer to the query is:\n",
@@ -497,7 +627,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "## Query 3: \n",
     "Returns every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
@@ -505,13 +637,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "query = \"CREATE TABLE IF NOT EXISTS music_library_03 \"\n",
+    "query = \"CREATE TABLE IF NOT EXISTS users_by_song \"\n",
     "query += \"(song text, sessionId int, itemInSession int, firstName text, lastName text, PRIMARY KEY (song, sessionId, itemInSession))\"\n",
     "\n",
     "try:\n",
@@ -522,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {
     "editable": true
    },
@@ -534,7 +666,7 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "        query = \"INSERT INTO music_library_03 (song, sessionId, itemInSession, firstName, lastName) \"\n",
+    "        query = \"INSERT INTO users_by_song (song, sessionId, itemInSession, firstName, lastName) \"\n",
     "        query = query + \"VALUES(%s, %s, %s, %s, %s)\"\n",
     "        # Inserting data from csv and converting to correct data type\n",
     "        session.execute(query, (line[9], int(line[8]), int(line[3]), line[1], line[4]))"
@@ -542,19 +674,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {
     "editable": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row(firstname='Sara', lastname='Johnson')\n",
-      "Row(firstname='Jacqueline', lastname='Lynch')\n",
-      "Row(firstname='Tegan', lastname='Levine')\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>lastName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sara</td>\n",
+       "      <td>Johnson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jacqueline</td>\n",
+       "      <td>Lynch</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tegan</td>\n",
+       "      <td>Levine</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    firstName lastName\n",
+       "0        Sara  Johnson\n",
+       "1  Jacqueline    Lynch\n",
+       "2       Tegan   Levine"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -562,7 +741,7 @@
     "    SELECT\n",
     "        firstName,\n",
     "        lastName\n",
-    "    FROM music_library_03\n",
+    "    FROM users_by_song\n",
     "    WHERE song = 'All Hands Against His Own'\n",
     "\"\"\"\n",
     "\n",
@@ -571,13 +750,22 @@
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
+    "results_list = []\n",
     "for row in rows:\n",
-    "    print(row)"
+    "    row_dict = {}\n",
+    "    row_dict['firstName'] = row.firstname\n",
+    "    row_dict['lastName'] = row.lastname\n",
+    "    results_list.append(row_dict)\n",
+    "    \n",
+    "df_results = pd.DataFrame(results_list)\n",
+    "df_results.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "### Answer\n",
     "The answer to the query is:\n",
@@ -598,25 +786,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "query = \"DROP TABLE music_library_01\"\n",
+    "query = \"DROP TABLE IF EXISTS songs_by_session\"\n",
     "try:\n",
     "    drop = session.execute(query)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
-    "query = \"DROP TABLE music_library_02\"\n",
+    "query = \"DROP TABLE IF EXISTS songs_by_user\"\n",
     "try:\n",
     "    drop = session.execute(query)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
-    "query = \"DROP TABLE music_library_03\"\n",
+    "query = \"DROP TABLE IF EXISTS users_by_song\"\n",
     "try:\n",
     "    drop = session.execute(query)\n",
     "except Exception as e:\n",
@@ -634,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {
     "editable": true
    },
@@ -643,15 +831,6 @@
     "session.shutdown()\n",
     "cluster.shutdown()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
