fix: primary key for table 2

--- a/project_02.ipynb
+++ b/project_02.ipynb
@@ -465,7 +465,7 @@
     "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
     "## for userid = 10, sessionid = 182\n",
     "query = \"CREATE TABLE IF NOT EXISTS songs_by_user \"\n",
-    "query += \"(userId int, sessionId int, itemInSession int, artist text, song text, firstName text, lastName text, PRIMARY KEY (userId, sessionId, itemInSession))\"\n",
+    "query += \"(userId int, sessionId int, itemInSession int, artist text, song text, firstName text, lastName text, PRIMARY KEY ((userId, sessionId), itemInSession))\"\n",
     "\n",
     "try:\n",
     "    session.execute(query)\n",
