adjusting notebook documentation

--- a/project_02.ipynb
+++ b/project_02.ipynb
@@ -15,7 +15,7 @@
     "editable": true
    },
    "source": [
-    "## PLEASE RUN THE FOLLOWING CODE FOR PRE-PROCESSING THE FILES"
+    "## Pre-processing the files into only one `csv` with the desired columns"
    ]
   },
   {
@@ -160,9 +160,9 @@
     "editable": true
    },
    "source": [
-    "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
+    "# Part II. Creating tables to query with Apache Cassandra\n",
     "\n",
-    "## Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
+    "Using the data file <font color=red>event_datafile_new.csv</font>, located within the Workspace directory, that contains following columns: \n",
     "- artist \n",
     "- firstName of user\n",
     "- gender of user\n",
@@ -175,7 +175,7 @@
     "- song title\n",
     "- userId\n",
     "\n",
-    "The image below is a screenshot of what the denormalized data should appear like in the <font color=red>**event_datafile_new.csv**</font> after the code above is run:<br>\n",
+    "The image below is a screenshot of what the denormalized data appears like in the <font color=red>**event_datafile_new.csv**</font> file:<br>\n",
     "\n",
     "<img src=\"images/image_event_datafile_new.jpg\">"
    ]
@@ -186,7 +186,7 @@
     "editable": true
    },
    "source": [
-    "## Begin writing your Apache Cassandra code in the cells below"
+    "## Beginning of the Apache Cassandra code"
    ]
   },
   {
@@ -220,7 +220,7 @@
     "editable": true
    },
    "source": [
-    "#### Create Keyspace"
+    "#### Creating a Keyspace"
    ]
   },
   {
@@ -247,7 +247,7 @@
     "editable": true
    },
    "source": [
-    "#### Set Keyspace"
+    "#### Setting the Keyspace"
    ]
   },
   {
@@ -270,7 +270,7 @@
     "editable": true
    },
    "source": [
-    "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
+    "## Modelling the Apache Cassandra tables, based on the queries that should be run"
    ]
   },
   {
@@ -279,15 +279,12 @@
     "editable": true
    },
    "source": [
-    "## Create queries to ask the following three questions of the data\n",
+    "### Following information should be queried from the tables\n",
+    "1. The artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
     "\n",
-    "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
+    "2. The name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
     "\n",
-    "\n",
-    "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
-    "    \n",
-    "\n",
-    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "3. Every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "\n",
     "\n"
    ]
@@ -298,8 +295,10 @@
     "editable": true
    },
    "source": [
-    "## Query 1: \n",
-    "Returns the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4"
+    "### Query 1: \n",
+    "Returns the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
+    "\n",
+    "The table `songs_by_session` has the columns `artist`, `song` and `length` that will be displayed in the results of the query and the columns `sessionId` and `itemInSession` that will be filtered. The primary key is composed of the partition key `sessionId` and clustering column `itemInSession`. Both are being used to filter the results"
    ]
   },
   {
@@ -345,7 +344,7 @@
     "editable": true
    },
    "source": [
-    "#### Do a SELECT to verify that the data have been inserted into each table"
+    "**Verifying that the table was created correctly and returns the expected data:**"
    ]
   },
   {
@@ -451,7 +450,9 @@
    "source": [
     "\n",
     "## Query 2:\n",
-    "Returns the name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182"
+    "Returns the name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "\n",
+    "The table `songs_by_user` has the columns `artist`, `song`, `firstName` and `lastName` that will be displayed in the results of the query, the columns `userId` and `sessionId` that will be filtered and the column `itemInSession` to order the results. The primary key is composed of the partition keys `userId` and `sessionId` (both for filtering) and clustering column `itemInSession` for ordering."
    ]
   },
   {
@@ -491,6 +492,13 @@
     "        query = query + \"VALUES(%s, %s, %s, %s, %s, %s, %s)\"\n",
     "        # Inserting data from csv and converting to correct data type\n",
     "        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Verifying that the table was created correctly and returns the expected data:**"
    ]
   },
   {
@@ -589,7 +597,7 @@
     "    FROM songs_by_user\n",
     "    WHERE userId = 10\n",
     "      AND sessionId = 182\n",
-    "    ORDER BY sessionId, itemInSession\n",
+    "    ORDER BY itemInSession\n",
     "\"\"\"\n",
     "\n",
     "try:\n",
@@ -632,7 +640,9 @@
    },
    "source": [
     "## Query 3: \n",
-    "Returns every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
+    "Returns every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "\n",
+    "The table `users_by_song` has the columns `firstName` and `lastName` that will be displayed in the results of the query, the column `song` that will be filtered and the column `userId` to uniquely identify each row along with `song`. The primary key is composed of the partition key `song` for filtering and clustering column `userId` to help uniquely identify each row."
    ]
   },
   {
@@ -644,7 +654,7 @@
    "outputs": [],
    "source": [
     "query = \"CREATE TABLE IF NOT EXISTS users_by_song \"\n",
-    "query += \"(song text, sessionId int, itemInSession int, firstName text, lastName text, PRIMARY KEY (song, sessionId, itemInSession))\"\n",
+    "query += \"(song text, firstName text, lastName text, userId int, PRIMARY KEY (song, userId))\"\n",
     "\n",
     "try:\n",
     "    session.execute(query)\n",
@@ -670,6 +680,13 @@
     "        query = query + \"VALUES(%s, %s, %s, %s, %s)\"\n",
     "        # Inserting data from csv and converting to correct data type\n",
     "        session.execute(query, (line[9], int(line[8]), int(line[3]), line[1], line[4]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Verifying that the table was created correctly and returns the expected data:**"
    ]
   },
   {
@@ -781,7 +798,7 @@
     "editable": true
    },
    "source": [
-    "### Drop the tables before closing out the sessions"
+    "### Dropping the tables"
    ]
   },
   {
@@ -817,7 +834,7 @@
     "editable": true
    },
    "source": [
-    "### Close the session and cluster connection¶"
+    "### Closing the session and cluster connection"
    ]
   },
   {
