fix: queries for second table

--- a/project_02.ipynb
+++ b/project_02.ipynb
@@ -676,10 +676,10 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "        query = \"INSERT INTO users_by_song (song, sessionId, itemInSession, firstName, lastName) \"\n",
-    "        query = query + \"VALUES(%s, %s, %s, %s, %s)\"\n",
+    "        query = \"INSERT INTO users_by_song (song, firstName, lastName, userId) \"\n",
+    "        query = query + \"VALUES(%s, %s, %s, %s\"\n",
     "        # Inserting data from csv and converting to correct data type\n",
-    "        session.execute(query, (line[9], int(line[8]), int(line[3]), line[1], line[4]))"
+    "        session.execute(query, (line[9], line[1], line[4], line[10]))"
    ]
   },
   {
@@ -760,6 +760,7 @@
     "        lastName\n",
     "    FROM users_by_song\n",
     "    WHERE song = 'All Hands Against His Own'\n",
+    "    ORDER BY userId\n",
     "\"\"\"\n",
     "\n",
     "try:\n",
