--- a/project_02.ipynb
+++ b/project_02.ipynb
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "editable": true,
     "scrolled": true
@@ -397,7 +397,7 @@
        "0  Faithless  495.307312  Music Matters (Mark Knight Dub)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "editable": true
    },
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "editable": true
    },
@@ -496,14 +496,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "**Verifying that the table was created correctly and returns the expected data:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {
     "editable": true
    },
@@ -582,7 +584,7 @@
        "3  Catch You Baby (Steve Pitron & Max Sanna Radio...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "editable": true
    },
@@ -664,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {
     "editable": true
    },
@@ -677,21 +679,23 @@
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
     "        query = \"INSERT INTO users_by_song (song, firstName, lastName, userId) \"\n",
-    "        query = query + \"VALUES(%s, %s, %s, %s\"\n",
+    "        query = query + \"VALUES(%s, %s, %s, %s)\"\n",
     "        # Inserting data from csv and converting to correct data type\n",
-    "        session.execute(query, (line[9], line[1], line[4], line[10]))"
+    "        session.execute(query, (line[9], line[1], line[4], int(line[10])))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "**Verifying that the table was created correctly and returns the expected data:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {
     "editable": true
    },
@@ -724,18 +728,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Sara</td>\n",
-       "      <td>Johnson</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>Jacqueline</td>\n",
        "      <td>Lynch</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>Tegan</td>\n",
        "      <td>Levine</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sara</td>\n",
+       "      <td>Johnson</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -743,12 +747,12 @@
       ],
       "text/plain": [
        "    firstName lastName\n",
-       "0        Sara  Johnson\n",
-       "1  Jacqueline    Lynch\n",
-       "2       Tegan   Levine"
+       "0  Jacqueline    Lynch\n",
+       "1       Tegan   Levine\n",
+       "2        Sara  Johnson"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,9 +792,11 @@
     "### Answer\n",
     "The answer to the query is:\n",
     "\n",
-    "User Name (first and last): Sara Johnson\n",
     "User Name (first and last): Jacqueline Lynch\n",
-    "User Name (first and last): Tegan Levine"
+    "\n",
+    "User Name (first and last): Tegan Levine\n",
+    "\n",
+    "User Name (first and last): Sara Johnson"
    ]
   },
   {
@@ -804,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {
     "editable": true
    },
@@ -840,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {
     "editable": true
    },
@@ -849,6 +855,15 @@
     "session.shutdown()\n",
     "cluster.shutdown()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -867,7 +882,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.6.3"
   },
   "vscode": {
    "interpreter": {
